# Projects

./: README.md
C-Containers/queue/: queue.c  queue.h
C-Containers/singly-linked-list/: CMakeLists.txt  singly_linked_list.c  singly_linked_list.h
C-Containers/stack/: stack.c  stack.h
GUI/MathTool/: CMakeLists.txt  about.cpp  main.cpp  system.cpp  system.h  window.cpp  window.h
GUI/Notepad/: CMakeLists.txt  about.cpp  resource.qrc
GUI/Password generator/: generator.cpp
OpenCL/OpenCL-Setup/: CMakeLists.txt  console.cpp  console.h  main.cpp  setup.cpp  setup.h
OpenCL/OpenCL-info/: CMakeLists.txt  info.c  info.h  main.c
OpenCL/VectorAddition/: CMakeLists.txt  init.c  init.h  kernel.cl  main.c
Qt-app/MathTool/: CMakeLists.txt  about.h  conversion.cpp  conversion.h  equation.cpp  equation.h  main.cpp  resource.qrc
Qt-app/Notepad/: about.h  main.cpp  notepad.cpp  notepad.h
Qt-app/Password generator/: CMakeLists.txt  generator.h  main.cpp  resource.qrc
