cmake_minimum_required(VERSION 3.16)
project(psw_generator VERSION 0.0.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(Qt6 REQUIRED COMPONENTS Widgets)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
file(GLOB resource *.cpp *.h *.qrc)
add_executable(psw_generator ${resource})
target_link_libraries(psw_generator PRIVATE Qt6::Widgets)
